feat(tickets): added end date to the indvidual ticket/pass response
